--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@img/sharp-win32-x64": "^0.33.0",
+    "@img/sharp-linux-x64": "^0.33.0",
     "express": "^4.18.2",
     "prisma": "^5.7.0",
     "sharp": "^0.33.0"
